*restored font size. Fixes in header. Fixed problem with horizontal scrollbar

--- a/2/css/banner.css
+++ b/2/css/banner.css
@@ -21,13 +21,13 @@
 }
 
 .banner-text__first-line{
-    font-size: 4vw;
+    font-size: 45px;
     background-color: #AC6F7F;
     display: inline;
 }
 
 .banner-text__second-line{
-    font-size: 3vw;
+    font-size: 40px;
     background-color: #AC6F7F;
     display: inline;
 }
