--- a/2/css/entertainments.css
+++ b/2/css/entertainments.css
@@ -1,7 +1,7 @@
 
 .entertainments{
     /*height: 303px;*/
-    width: 100%;
+    max-width: 100%;
 }
 
 
@@ -27,6 +27,22 @@
     float: left;
 }
 
+@media screen and (max-width: 768px){
+    
+    .box{
+        width: inherit;
+    }
+
+    .box--rocket{
+    border-bottom: grey solid 2px;
+    border-right-style: none;
+    }
+
+    .button__background--yellow{
+    float: right;
+    }    
+}
+
 /* text properties */
 
 .box__text{
@@ -43,20 +59,4 @@
 
 .button__background--yellow:hover {
     background: #bd4a9e;
-}
-
-@media screen and (max-width: 768px){
-    
-    .box{
-        width: inherit;
-    }
-
-    .box--rocket{
-    border-bottom: grey solid 2px;
-    border-right-style: none;
-    }
-
-    .button__background--yellow{
-    float: right;
-    }    
 }
