--- a/2/css/footer.css
+++ b/2/css/footer.css
@@ -4,7 +4,7 @@ footer{
     background-color: #F0F0F0;
     left: 0;
     bottom: 0;
-    font-size: 1.7vw;
+    font-size: 15px;
 }
 
 .footer__text{
