--- a/2/css/header.css
+++ b/2/css/header.css
@@ -1,7 +1,7 @@
 
-header{
-    width: 100%;
-    height: 80px;
+.header{
+    display: flex;
+    max-width: 100%;
     background-color: white;
     border-top-color: #FDBD1F;
     box-sizing: content-box;
@@ -23,11 +23,11 @@ header{
     height: 55px;
 }
 
-    /* write in HTML!!!!*/
 .logo__link{   
     display: block;
     width: 20%;
     float: left;
+    margin: 0px 10px;
 }
 
 .logo__text{
@@ -49,8 +49,8 @@ header{
     margin: auto;
     list-style-type: none;
     height: 100%;
-    display: inline-block;
-    width: 78%;
+    display: block;
+    float: right;
 }
 
 .navigation__buttons{
@@ -58,20 +58,20 @@ header{
     font-weight: bold;
     float: right;
     height: 100%;
-    width: 100%;
+    max-width: 100%;
 }
 
 .navigation__list{
 	margin: 0;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     -webkit-padding-start: 0;
 }
 
 .navigation__item{
 	display: inline-block;
-    width: 12%;
     height: 100%;
+    padding-left: 20px;
 }
 
 .navigation__link {
@@ -94,11 +94,27 @@ header{
     background-color: #FCBD1A;
 }
 
-
+@media screen and (max-width: 1024px){
+    
+}
 
 @media screen and (max-width: 768px){
+    .header{
+        flex-direction: column;
+        /*justify-content: flex-end;*/
+    }
 
+    .header__logo{
+        margin: auto;
+        align-items: center;
+        width: 25%;
+        padding: 0;
+    }
 
+    .navigation__link{
+        line-height: 30px;
+        
+    }
 }
 
 @media screen and (max-width: 412px){
